build(pom): 更新 Maven 依赖配置
- 调整 pilates-auth 和 pilates-system 的依赖结构
- 移除不必要的依赖项
- 添加 MyBatis-Plus 分页支持