@@ -2,19 +2,15 @@ package com.jrmall.pilates.system.controller;
 
 import com.alibaba.excel.EasyExcel;
 import com.alibaba.excel.ExcelWriter;
-import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.jrmall.pilates.common.result.PageResult;
 import com.jrmall.pilates.common.result.Result;
 import com.jrmall.pilates.common.web.annotation.PreventDuplicateResubmit;
-import com.jrmall.pilates.system.dto.UserAuthInfo;
-import com.jrmall.pilates.system.listener.UserImportListener;
-import com.jrmall.pilates.system.model.entity.SysUser;
+import com.jrmall.pilates.system.api.UserApi;
 import com.jrmall.pilates.system.model.form.UserForm;
 import com.jrmall.pilates.system.model.form.UserRegisterForm;
 import com.jrmall.pilates.system.model.query.UserPageQuery;
 import com.jrmall.pilates.system.model.vo.*;
-import com.jrmall.pilates.system.service.SysUserService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -22,6 +18,7 @@ import jakarta.servlet.ServletOutputStream;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.apache.dubbo.config.annotation.DubboReference;
 import org.springdoc.core.annotations.ParameterObject;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.validation.annotation.Validated;
@@ -32,6 +29,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 /**
@@ -46,14 +44,15 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SysUserController {
 
-    private final SysUserService userService;
+    @DubboReference
+    private UserApi userApi;
 
     @Operation(summary = "用户分页列表")
     @GetMapping("/page")
     public PageResult<UserPageVO> getUserPage(
             @ParameterObject UserPageQuery queryParams
     ) {
-        IPage<UserPageVO> result = userService.getUserPage(queryParams);
+        IPage<UserPageVO> result = userApi.getUserPage(queryParams);
         return PageResult.success(result);
     }
 
@@ -61,10 +60,10 @@ public class SysUserController {
     @PostMapping
     @PreAuthorize("@ss.hasPerm('sys:user:add')")
     @PreventDuplicateResubmit
-    public Result saveUser(
+    public Result<Boolean> saveUser(
             @RequestBody @Valid UserForm userForm
     ) {
-        boolean result = userService.saveUser(userForm);
+        boolean result = userApi.saveUser(userForm);
         return Result.judge(result);
     }
 
@@ -73,74 +72,62 @@ public class SysUserController {
     public Result<UserForm> getUserForm(
             @Parameter(description = "用户ID") @PathVariable Long userId
     ) {
-        UserForm formData = userService.getUserFormData(userId);
+        UserForm formData = userApi.getUserFormData(userId);
         return Result.success(formData);
     }
 
     @Operation(summary = "修改用户")
     @PutMapping(value = "/{userId}")
     @PreAuthorize("@ss.hasPerm('sys:user:edit')")
-    public Result updateUser(
+    public Result<Boolean> updateUser(
             @Parameter(description = "用户ID") @PathVariable Long userId,
             @RequestBody @Validated UserForm userForm) {
-        boolean result = userService.updateUser(userId, userForm);
+        boolean result = userApi.updateUser(userId, userForm);
         return Result.judge(result);
     }
 
     @Operation(summary = "删除用户")
     @DeleteMapping("/{ids}")
     @PreAuthorize("@ss.hasPerm('sys:user:delete')")
-    public Result deleteUsers(
+    public Result<Boolean> deleteUsers(
             @Parameter(description = "用户ID，多个以英文逗号(,)分割") @PathVariable String ids
     ) {
-        boolean result = userService.deleteUsers(ids);
+        boolean result = userApi.deleteUsers(ids);
         return Result.judge(result);
     }
 
     @Operation(summary = "修改用户密码")
     @PatchMapping(value = "/{userId}/password")
     @PreAuthorize("@ss.hasPerm('sys:user:reset_pwd')")
-    public Result updatePassword(
+    public Result<Boolean> updatePassword(
             @Parameter(description = "用户ID") @PathVariable Long userId,
             @RequestParam String password
     ) {
-        boolean result = userService.updatePassword(userId, password);
+        boolean result = userApi.updatePassword(userId, password);
         return Result.judge(result);
     }
 
     @Operation(summary = "修改用户状态")
     @PatchMapping(value = "/{userId}/status")
-    public Result updateUserStatus(
+    public Result<Boolean> updateUserStatus(
             @Parameter(description = "用户ID") @PathVariable Long userId,
             @Parameter(description = "用户状态(1:启用;0:禁用)") @RequestParam Integer status
     ) {
-        boolean result = userService.update(new LambdaUpdateWrapper<SysUser>()
-                .eq(SysUser::getId, userId)
-                .set(SysUser::getStatus, status)
-        );
+        boolean result = userApi.updateStatus(userId, status);
         return Result.judge(result);
-    }
-
-    @Operation(summary = "获取用户认证信息", hidden = true)
-    @GetMapping("/{username}/authInfo")
-    public Result<UserAuthInfo> getUserAuthInfo(
-            @Parameter(description = "用户名") @PathVariable String username
-    ) {
-        UserAuthInfo userAuthInfo = userService.getUserAuthInfo(username);
-        return Result.success(userAuthInfo);
     }
 
     @Operation(summary = "获取登录用户信息")
     @GetMapping("/me")
     public Result<UserInfoVO> getCurrentUserInfo() {
-        UserInfoVO userInfoVO = userService.getCurrentUserInfo();
+        UserInfoVO userInfoVO = userApi.getCurrentUserInfo();
         return Result.success(userInfoVO);
     }
 
     @Operation(summary = "注销登出")
     @DeleteMapping("/logout")
-    public Result logout() {
-        boolean result = userService.logout();
+    public Result<Boolean> logout() {
+        boolean result = userApi.logout();
         return Result.judge(result);
     }
 
@@ -149,7 +136,7 @@ public class SysUserController {
     public void downloadTemplate(HttpServletResponse response) throws IOException {
         String fileName = "用户导入模板.xlsx";
         response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
-        response.setHeader("Content-Disposition", "attachment; filename=" + URLEncoder.encode(fileName, "UTF-8"));
+        response.setHeader("Content-Disposition", "attachment; filename=" + URLEncoder.encode(fileName, StandardCharsets.UTF_8));
 
         String fileClassPath = "excel-templates" + File.separator + fileName;
         InputStream inputStream = this.getClass().getClassLoader().getResourceAsStream(fileClassPath);
@@ -160,49 +147,40 @@ public class SysUserController {
         excelWriter.finish();
     }
 
-    @Operation(summary = "导入用户")
-    @PostMapping("/import")
-    public Result importUsers(@Parameter(description = "部门ID") Long deptId, MultipartFile file) throws IOException {
-        UserImportListener listener = new UserImportListener(deptId);
-        EasyExcel.read(file.getInputStream(), UserImportVO.class, listener).sheet().doRead();
-        String msg = listener.getMsg();
-        return Result.success(msg);
-    }
-
     @Operation(summary = "导出用户")
     @GetMapping("/export")
     public void exportUsers(UserPageQuery queryParams, HttpServletResponse response) throws IOException {
         String fileName = "用户列表.xlsx";
         response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
-        response.setHeader("Content-Disposition", "attachment; filename=" + URLEncoder.encode(fileName, "UTF-8"));
+        response.setHeader("Content-Disposition", "attachment; filename=" + URLEncoder.encode(fileName, StandardCharsets.UTF_8));
 
-        List<UserExportVO> exportUserList = userService.listExportUsers(queryParams);
+        List<UserExportVO> exportUserList = userApi.listExportUsers(queryParams);
         EasyExcel.write(response.getOutputStream(), UserExportVO.class).sheet("用户列表")
                 .doWrite(exportUserList);
     }
 
     @Operation(summary = "注册用户")
     @PostMapping("/register")
-    public Result registerUser(
+    public Result<Boolean> registerUser(
             @RequestBody @Valid UserRegisterForm userRegisterForm
     ) {
-        boolean result = userService.registerUser(userRegisterForm);
+        boolean result = userApi.registerUser(userRegisterForm);
         return Result.judge(result);
     }
 
     @Operation(summary = "发送注册短信验证码")
     @PostMapping("/register/sms_code")
-    public Result sendRegistrationSmsCode(
+    public Result<Boolean> sendRegistrationSmsCode(
             @Parameter(description = "手机号") @RequestParam String mobile
     ) {
-        boolean result = userService.sendRegistrationSmsCode(mobile);
+        boolean result = userApi.sendRegistrationSmsCode(mobile);
         return Result.judge(result);
     }
 
     @Operation(summary = "获取用户个人中心信息")
     @GetMapping("/profile")
-    public Result getUserProfile() {
-        UserProfileVO userProfile = userService.getUserProfile();
+    public Result<UserProfileVO> getUserProfile() {
+        UserProfileVO userProfile = userApi.getUserProfile();
         return Result.success(userProfile);
     }
 
